This is the changelog for developers, != changelog for the end user 
that we distribute with the binaries. (see changelog)

30/09/2006
namespace
- Added LocalLcPath to plugin interface
- Added enhanced Texturebrowser (ETB) by Shaderman
- Added shaderplug by Shaderman, accompanies the ETB
- Added xmltagging lib by Shaderman, accompanies the ETB
- Added new icons for ETB, Console, Entityinspector and Lighteditor
- Fixed minor warning in Sunplug Project
- Fixed PATH_MAX namecollision in ptrview plugin on Linux
- Final fix for 64 bit patch.h issue



12/09/2006
namespace
- Fixed 64 Bit issue in patch.h, see http://zerowing.idsoftware.com/bugzilla/show_bug.cgi?id=1109
  for details

11/09/2006
namespace
- Fixed unnecessary warnings, see http://zerowing.idsoftware.com/bugzilla/show_bug.cgi?id=1108
  for details

11/09/2006
namespace
- Added sunplug (Mapcoordinator-plugin for ET) by Topsun
  ET only: setting mapcoordsmins and mapcoordsmaxs in the worldspawn
  Tester: Shaderman
- Added brushexport Plugin by namespace
  Exports selected brushes as wavefront object.
  Tester: Shaderman

11/09/2006
namespace
- Fixed compile error on x86_64, see http://zerowing.idsoftware.com/bugzilla/show_bug.cgi?id=1105
  for details.

09/09/2996
namespace
- Added strafing for the camerawindow while holding ctrl
- Additional forward movement can be enabled by pressing shift during strafe

22/08/2006
SPoG
- Added VFS support for locating the archive a file was loaded from.
- Changed Doom3 entity definition parser to gracefully handle parse errors.
- Fixed crash when loading entity definitions in quake4 1.3 point release.

13/08/2006
SPoG
- Disabled 'detail' content flag checkbox in quake2 Surface Inspector.

22/07/2006
SPoG
- Fixed doom3 func_static with model not appearing to move when dragged. 
- Changed ASE model loader to parse material names the same way as DoomEdit.
- Fixed title of wait-dialog when loading a model.
- Fixed doom3 func_static with blank 'model' key being invisible.