@@ -42,6 +42,15 @@
     <feature name="PrtView Plugin" desc="Geoffrey Dewan's Portal Viewer">
       <component name=".\components\prtview.xml" root="..\..\install"/>
     </feature>
+    <feature name="Brush Export Plugin" desc="namespace's Wavefront Brush Export">
+      <component name=".\components\brushexport.xml" root="..\..\install"/>
+    </feature>
+    <feature name="Sunplug Plugin" desc="Topsun's Sunplug for Enemy Territory">
+      <component name=".\components\sunplug.xml" root="..\..\install"/>
+    </feature>
+    <feature name="Shaderplug Plugin" desc="Shaderman's plugin for creating shader tag files">
+      <component name=".\components\shaderplug.xml" root="..\..\install"/>
+    </feature>
     <feature name="GtkRadiant Editor Manual" desc="Documentation for GtkRadiant users.">
       <component name=".\components\radiant_manual.xml" root="..\..\docs\manual"/>
     </feature>
